# RaZor

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: Linux.yml  Windows.yml
assets/materials/: default.mtl
assets/resources/: resources.qrc
assets/translations/: english.ts  french.ts
include/RaZor/Interface/: AppWindow.hpp  ComponentGroup.hpp  ComponentGroup.inl  EntitiesList.hpp  FileWidget.hpp  FileWidget.inl  MainWindow.hpp  TexturesList.hpp  ValuePicker.hpp
include/RaZor/Interface/Component/: CameraGroup.hpp  ColliderGroup.hpp  ComponentGroup.hpp  LightGroup.hpp  ListenerGroup.hpp  LuaScriptGroup.hpp  MeshGroup.hpp  MeshRendererGroup.hpp  RigidBodyGroup.hpp  SoundGroup.hpp  TransformGroup.hpp
interface/: AABBInfo.ui  About.ui  AudioSystemSettings.ui  CameraComp.ui  ColliderComp.ui  LightComp.ui  ListenerComp.ui  LuaScriptComp.ui  MeshComp.ui  MeshRendererComp.ui  PhysicsSystemSettings.ui  PlaneInfo.ui  RaZor.ui  RenderSystemSettings.ui  RigidBodyComp.ui  SoundComp.ui  TransformComp.ui
src/RaZor/Interface/: AppComponents.cpp  AppWindow.cpp  EntitiesList.cpp  MainWindow.cpp  TexturesList.cpp  ValuePicker.cpp
src/RaZor/Interface/Component/: AppComponents.cpp  CameraGroup.cpp  Collider.cpp  ColliderGroup.cpp  ComponentGroup.cpp  LightGroup.cpp  ListenerGroup.cpp  LuaScriptGroup.cpp  MeshGroup.cpp  MeshRendererGroup.cpp  RigidBodyGroup.cpp  SoundGroup.cpp  TransformGroup.cpp
